# mmv

./: Cargo.toml  README.md
src/: cli.rs  controller.rs  filesystem.rs  main.rs  matcher.rs
tests/: integration.rs
