[package]
name = "mmv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.12"
clap = { version = "*", features = ["derive"]}
clap-help = "1.0.0"
colored = "2.0.4"
exitcode = "1.1.2"
path-clean = "1.0.1"
serial_test = "2.0.0"
walkdir = "2.4.0"

[[bin]]
name = "mmv"
path = "src/main.rs"

[build]
out-dir = "target"

